tests/macros/input/extension.stderr
error: option `extension` does not exist for kind `input`
 --> $DIR/extension.rs:2:45
  |
2 |     let q = inquisition::questions![Input { extension: todo!() }];
  |                                             ^^^^^^^^^
