tests/macros/input/extension.rs
fn main() {
    let q = inquisition::questions![Input { extension: todo!() }];
}
